--- a/src/config/style/variables/variables.scss
+++ b/src/config/style/variables/variables.scss
@@ -25,6 +25,8 @@
     --background-tinted-highlight: hsla(0,0%,100%,.1);
     --background-tinted-press: hsla(0,0%,100%,.04);
     --background-unsafe-for-small-text-base: #121212;
+    --background-modal: rgba(35, 35, 35, 0.95);
+    --background-modal-wrapper: hsla(0,0%,100%,0.1);
 
     // Шрифты
     --font-family: spotify-circular, Helvetica, Arial, sans-serif;
