--- a/src/config/style/variables/variables.scss
+++ b/src/config/style/variables/variables.scss
@@ -26,6 +26,7 @@
     --background-unsafe-for-small-text-base: #121212;
     --background-modal: rgba(35, 35, 35, 0.95);
     --background-modal-wrapper: hsla(0,0%,100%,0.1);
+    --background-modal-wrapper-2: hsla(0,0%,100%,0.4);
 
     // Шрифты
     --font-family: spotify-circular, Helvetica, Arial, sans-serif;
