--- a/src/pages/MusicAdmin/style.module.scss
+++ b/src/pages/MusicAdmin/style.module.scss
@@ -16,6 +16,7 @@
     flex-direction: column;
     align-items: center;
     padding: 10px;
+    position: relative;
 }
 
 .title {
@@ -73,4 +74,20 @@
 .btnCreate {
     width: 100%;
     margin-top: auto;
+}
+
+.previewImg {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    bottom: 100px;
+    right: 100px;
+    border: 3px solid var(--color-font-primary);
+    border-radius: 5px;
+}
+
+.musicName {
+    position: absolute;
+    right: 60px;
+    bottom: 70px;
 }
