--- a/src/ui/shared/MusicCard/style.module.scss
+++ b/src/ui/shared/MusicCard/style.module.scss
@@ -8,24 +8,25 @@
     margin-bottom: 20px;
     margin-left: 20px;
     transition: 300ms;
+    position: relative;
     &:hover {
         background: rgba(0, 0, 0, 0.148);
         transition: 300ms;
         cursor: pointer;
-        .play {
+
+        .btnPlay {
+            bottom: 100px;
             opacity: 1;
-            transition: 400ms;
-        };
+        }
     }
 }
 
 .play {
- opacity: 0;
- transition: 400ms;
- border-radius: 50%;
- width: 50px;
- height: 50px;
- align-self: flex-end;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    align-self: flex-end;
+    color: var(--color-font-primary);
 }
 
 .img {
@@ -47,4 +48,18 @@
     margin-top: 10px;
     margin-left: 25px;
     color: var(--color-font-gray)
+}
+
+.btnPlay {
+    background: none;
+    opacity: 0;
+    transition: all 400ms;
+    position: absolute;
+    bottom: 50px;
+    right: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 55px;
+    height: 55px;
 }
