--- a/src/pages/Music/style.module.scss
+++ b/src/pages/Music/style.module.scss
@@ -8,4 +8,40 @@
 .cardWrapper {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 40px;
+    justify-content: center;
+}
+
+.search {
+    width: 500px;
+    height: 40px;
+    border-radius: 10px;
+    padding-left: 50px;
+}
+
+.logo {
+    font-size: 30px;
+    color: var(--color-font-primary);
+    position: absolute;
+    margin-right: 450px;
+}
+
+.inputContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.paginationButtons {
+    display: flex;
+    justify-content: end;
+    
+}
+
+.button {
+    margin-left: 5px;
+    width: 30px;
+    height: 30px;
+    border-radius: 20%;
+    text-align: center;
 }
