added skeleton loader for music card

--- a/src/pages/Music/style.module.scss
+++ b/src/pages/Music/style.module.scss
@@ -33,9 +33,11 @@
 }
 
 .paginationButtons {
+    position: absolute;
+    bottom: 100px;
+    right: 120px;
     display: flex;
-    justify-content: end;
-    
+
 }
 
 .button {
